# swcli

./: Cargo.toml  README.md
src/: constants.rs  main.rs
